src/test/deca/avecObjet/valid/class_with_main_new copy.deca
// Description :
//    Test unitaire : Classe vide et définition new d'un objet.
//
// Resultats :
//    OK

class A {
}

{
    A a = new A();
}

